test/compile_errors/err_recovery_incomplete_match.w
//! expect-error: expected

fn main:
    let x = 42
    match x
        1 =>
        2 => print("two")
    print("done")
